@@ -8,6 +8,7 @@ Change log next version
 * Upgraded TestNG module to 6.3.1.
 * Upgraded EasyMock extension API to use version 3.1 of EasyMock. This version should fix a couple of OutOfMemory issues.
 * PowerMockito is updated to use Mockito 1.9.0
+* setUp-method with @Before annotation is no longer executed twice when extending TestCase (issue 356)
 
 Change log 1.4.10 (2011-08-23)
 ------------------------------
